# wechat-bridge

./: .env.example  LICENSE  README.md  pyproject.toml  wechat-bridge.service  wechat-bridge@.service
.github/workflows/: publish.yml
scripts/: auto-version.sh  test_connectivity.py  wrapper.sh
wechat_bridge/: __init__.py  __main__.py  bridge.py  cdn.py  chunk.py  claude_runner.py  cli.py  commands.py  config.py  format.py  ilink_api.py  ilink_auth.py  ilink_types.py  lockfile.py  session.py  updater.py  workspace.py
