[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wechat-bridge"
version = "2026.4.11.2"
description = "WeChat <-> Claude Code bridge via iLink Bot API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["wechat", "weixin", "claude", "ai", "chatbot", "bridge", "ilink"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "cryptography>=41",
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/feir/wechat-bridge"
Repository = "https://github.com/feir/wechat-bridge"
Issues = "https://github.com/feir/wechat-bridge/issues"

[project.optional-dependencies]
dev = ["pytest", "python-dotenv"]

[project.scripts]
wechat-bridge = "wechat_bridge.__main__:main"
wechat-cli = "wechat_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["wechat_bridge"]
